# colcon-in-container

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yaml  cla-check.yaml  colcon_in_container.yaml  test_container_build.yaml
colcon_build_in_container/: helper.py  lxd.py
colcon_build_in_container/config/: cloud-init.yaml
colcon_build_in_container/verb/: build_in_container.py
colcon_container_build/: helper.py  lxd.py
colcon_container_build/config/: cloud-init.yaml
colcon_container_build/verb/: container_build.py
colcon_in_container/: __init__.py  logging.py
colcon_in_container.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
colcon_in_container/providers/: _helper.py  exceptions.py  lxd.py  multipass.py  provider.py  provider_factory.py
colcon_in_container/providers/config/: cloud-init.yaml
colcon_in_container/verb/: _parser.py  _pro.py  _rosdep.py  build_in_container.py  in_container.py  release_in_container.py  test_in_container.py
test/: spell_check.words  test_cloud_init_config.py  test_copyright_license.py  test_flake8.py  test_proxy_env.py  test_spell_check.py
