[metadata]
name = colcon-container-build
version = attr: colcon_container_build.__version__
url = https://colcon.readthedocs.io
author = Guillaume Beuzeboc
author_email = guillaume.beuzeboc@canonical.com
maintainer = Guillaume Beuzeboc
maintainer_email = guillaume.beuzeboc@canonical.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = GNU General Public License v3.0
description = Build a ROS 2 colcon workspace in a fresh LXD container
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.2
  pylxd>=2.3.1
  pyopenssl
packages = find:
# tests_require =
#   flake8
#   pytest
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[options.entry_points]
colcon_core.verb =
    container-build = colcon_container_build.verb.container_build:ContainerBuildVerb

[options.packages.find]
exclude =
  test
  test.*

[aliases]
test = pytest

[flake8]
import-order-style = google
