[metadata]
name = colcon-in-container
version = attr: colcon_in_container.__version__
url = https://colcon.readthedocs.io
author = Guillaume Beuzeboc
author_email = guillaume.beuzeboc@canonical.com
maintainer = Guillaume Beuzeboc
maintainer_email = guillaume.beuzeboc@canonical.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = GNU General Public License v3.0
description = Build a ROS 2 colcon workspace in a fresh LXD container
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.2
  cryptography==3.4.8
  pylxd @ git+https://github.com/lxc/pylxd
packages = find:
zip_safe = true
include_package_data = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  mypy
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
  pytest-mypy
  scspell3k>=2.2
  types-setuptools

[options.entry_points]
colcon_core.verb =
    build-in-container = colcon_in_container.verb.build_in_container:BuildInContainerVerb

[options.packages.find]
exclude =
  test
  test.*

[aliases]
test = pytest

[flake8]
import-order-style = google

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
